[tool.poetry]
name = "my-first-bot"
version = "0.1.0"
description = ""
authors = ["kzri4 <kazu4126ab@gmail.com>"]
readme = "README.md"
packages = [{include = "my_first_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
line-bot-sdk = "^2.3.0"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
